force-app/main/default/objects/Employee__c/fields/EmployeeCode__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCode__c</fullName>
    <externalId>true</externalId>
    <label>Employee Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>