force-app/main/default/objects/Employee__c/fields/EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNumber__c</fullName>
    <externalId>true</externalId>
    <label>Employee Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>